--- a/15-web-app/index.html
+++ b/15-web-app/index.html
@@ -5,6 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script>
+      // const sleep = m => new Promise (r => setTimeout(r, m));
+      let output = null;
+      const add_message_function;
+
+      const log_add_message = (a,b, sum) => {
+        if(output == null) {
+          console.log("page load not complete: log_add_message");
+          return;
+        }
+
+        output.innerHTML += `${a} + ${b} = ${sum}<br>`;
+      };
+
+      let importObject = {
+        env: {
+          log_add_message
+        }
+      }
+    </script>
   </head>
   <body>
     <h1>Hello World</h1>
