--- a/15-web-app/index.html
+++ b/15-web-app/index.html
@@ -23,6 +23,20 @@
         env: {
           log_add_message
         }
+      };
+
+      (async () => {
+        // await sleep(5000);
+        let obj = await WebAssembly.instantiate(fetch('add_message.wasm'), importObject);
+
+        add_message_function = obj.instance.exports.add_message;
+
+        let btn = document.getElementById('add_message_button');
+        btn.style.display = "block";
+      })();
+
+      function onPageLoad() {
+         output = document.getElementById('output');
       }
     </script>
   </head>
