--- a/15-web-app/index.html
+++ b/15-web-app/index.html
@@ -8,10 +8,10 @@
     <script>
       // const sleep = m => new Promise (r => setTimeout(r, m));
       let output = null;
-      const add_message_function;
+      let add_message_function;
 
-      const log_add_message = (a,b, sum) => {
-        if(output == null) {
+      const log_add_message = (a, b, sum) => {
+        if (output == null) {
           console.log("page load not complete: log_add_message");
           return;
         }
@@ -21,26 +21,42 @@
 
       let importObject = {
         env: {
-          log_add_message
-        }
+          log_add_message,
+        },
       };
 
       (async () => {
         // await sleep(5000);
-        let obj = await WebAssembly.instantiate(fetch('add_message.wasm'), importObject);
+        let obj = await WebAssembly.instantiateStreaming(
+          fetch("add_message.wasm"),
+          importObject
+        );
 
         add_message_function = obj.instance.exports.add_message;
 
-        let btn = document.getElementById('add_message_button');
+        let btn = document.getElementById("add_message_button");
         btn.style.display = "block";
       })();
 
       function onPageLoad() {
-         output = document.getElementById('output');
+        output = document.getElementById("output");
       }
     </script>
   </head>
-  <body>
-    <h1>Hello World</h1>
+  <body
+    onload="onPageLoad()"
+    style="font-family: 'Courier New', Courier, monospace"
+  >
+    <input type="number" id="a_val" value="0" /><br /><br />
+    <input type="number" id="b_val" value="0" /><br /><br />
+    <button
+      id="add_message_button"
+      type="button"
+      style="display: none"
+      onclick="add_message_function(document.getElementById('a_val').value, document.getElementById('b_val').value)"
+    >
+      Add Values
+    </button>
+    <p id="output" style="float: left; width: 200px; min-height: 300px"></p>
   </body>
 </html>
