--- a/18-Collide-in-JS/index.html
+++ b/18-Collide-in-JS/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="collide.js" defer></script>
-    <title>Collide</title>
+    <title>JS version of collision</title>
   </head>
   <body>
-    <canvas id="cnvs" width="512" height="512"></canvas>
+    <canvas id="canvas" width="1024" height="1024"></canvas>
+    <script src="collide-in-js.js"></script>
   </body>
 </html>
