Adding a calculation error intentionally

--- a/19-Debuggin-Techniques/logging/log.html
+++ b/19-Debuggin-Techniques/logging/log.html
@@ -24,7 +24,7 @@
       };
 
       (async () => {
-        let obj = await WebAssembly.instantiate(
+        let obj = await WebAssembly.instantiateStreaming(
           fetch("log.wasm"),
           importObject
         );
