--- a/19-Debuggin-Techniques/debugger/firefox/debugger.html
+++ b/19-Debuggin-Techniques/debugger/firefox/debugger.html
@@ -14,19 +14,11 @@
     <br /><br />
     DISTANCE: <span id="dist_out">??</span>
     <script>
-      var distance = null;
-      let importObject = {
-        js: {
-          log_f64: function message(message_index, value) {
-            console.log(`message #${message_index}\nvalue=${value}`);
-          },
-        },
-      };
+      let distance = null;
 
       (async () => {
         let obj = await WebAssembly.instantiateStreaming(
-          fetch("log.wasm"),
-          importObject
+          fetch("debugger.wasm")
         );
 
         distance = obj.instance.exports.distance;
@@ -35,11 +27,11 @@
       function set_distance() {
         let dist_out = document.getElementById("dist_out");
         let x1 = document.getElementById("x1");
-        let y1 = document.getElementById("y1");
         let x2 = document.getElementById("x2");
+        let y1 = document.getElementById("y1");
         let y2 = document.getElementById("y2");
 
-        let dist = distance(x1.value, y1.value, x2.value, y2.value);
+        let dist = distance(x1.value, x2.value, y1.value, y2.value);
         dist_out.innerHTML = dist;
       }
     </script>
